src/test/ui/issues/issue-38954.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-38954.rs:1:23
   |
LL | fn _test(ref _p: str) {}
   |                       ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: all function arguments must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
